Fix responsiveness of welcome-container on mobile to full width, tablet and higher to top, left margins 50% and center in parent element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,13 +60,6 @@ button:hover {
     display: none;
     z-index: 99;
     position: fixed;
-    /* Margin top and left to center both vertical and horizontal */
-    top: 50%;
-    left: 50%;
-    /* Center within parent element */
-    transform: translate(-50%, -50%);
-    max-width: 1200px; /* Same as the body's max-width */
-    width: auto;
 }
 
 /*
@@ -85,4 +78,17 @@ button:hover {
 
 .incorrect-answer {
     background-color: #AC3931;
+}
+
+@media screen and (min-width: 768px) {
+    #welcome-container {
+    /* Margin top and left to center both vertical and horizontal */
+    top: 50%;
+    left: 50%;
+    /* Center within parent element */
+    transform: translate(-50%, -50%);
+    /* Same as the body's max-width */
+    max-width: 1200px;
+    width: auto;
+    }
 }
